--- a/src/component/Experiences/RemoteHouse/RemoteHouse.css
+++ b/src/component/Experiences/RemoteHouse/RemoteHouse.css
@@ -25,7 +25,7 @@
     max-width: 50%
 }
 .OurStoryInnerContainerImage{
-    background-position: center;
+    background-position: top center;
 }
 @media screen and (max-width:768px) {
     .column-6 {
